--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,5 +1,7 @@
 {% extends 'user/_layout.html.twig' %}
 
+{% form_theme form 'bootstrap_4_layout.html.twig' %}
+
 {% block title %}User edit profile{% endblock %}
 
 {% block user_content %}
