comments & bookmarks count

--- a/templates/user/comments.html.twig
+++ b/templates/user/comments.html.twig
@@ -20,8 +20,8 @@
                                 <small>{{ comment.owner.firstname }}</small>
                                 <ul class="icons-inline text-info small">
                                     <li>{{ comment.createdAt|ago }}</li>
-                                    <li><i class="fas fa-thumbs-up"></i> {{ comment.likes }}</li>
-                                    <li><i class="fas fa-thumbs-down"></i> {{ comment.dislikes }}</li>
+                                    <li><i class="fas fa-thumbs-up"></i> {{ comment.likeCount }}</li>
+                                    <li><i class="fas fa-thumbs-down"></i> {{ comment.dislikeCount }}</li>
                                 </ul>
                             </footer>
                         </blockquote>
