--- a/templates/article/_include/_article_list.html.twig
+++ b/templates/article/_include/_article_list.html.twig
@@ -7,9 +7,9 @@
                 </a>
             </h3>
             <p class="text-info small">
-            {% for tag in article.tags %}
-                <a href="{{ path('article_by_tag', {name: tag.name}) }}" class="border px-1 rounded text-info">{{ tag.name }}</a>
-            {% endfor %}
+                {% for tag in article.tags %}
+                    <a href="{{ path('article_by_tag', {name: tag.name}) }}" class="border px-1 rounded text-info">{{ tag.name }}</a>
+                {% endfor %}
             </p>
             <p>{{ article.content|truncate(400)|raw }}</p>
             <div class="clearfix">
@@ -20,10 +20,10 @@
                     <ul class="icons-inline text-info small">
                         <li>{{ article.author.firstname }} <a href="{{ path('user_profile', {email:article.author.username}) }}">@{{ article.author.username }}</a></li>
                         <li>{{ article.createdAt|date('d.m.Y') }}</li>
-                        <li><i class="fas fa-bookmark"></i><span>0</span></li>
+                        <li><i class="fas fa-bookmark"></i><span>{{ article.bookmarkCount }}</span></li>
                         <li><i class="fas fa-eye"></i><span>0</span></li>
-                        <li><i class="fas fa-comment"></i><span>{{ article.comments|length }}</span></li>
-                        <li><i class="fas fa-thumbs-up"></i> {{ article.likes }}</li>
+                        <li><i class="fas fa-comment"></i><span>{{ article.commentCount }}</span></li>
+                        <li><i class="fas fa-thumbs-up"></i> {{ article.likeCount }}</li>
                     </ul>
                 </div>
             </div>
