--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -18,9 +18,13 @@
                         {% endif %}
                         <ul class="icons-inline text-info small">
                             <li>{{ article.createdAt|date('H:i d.m.Y') }}</li>
-                            <li><a href="{{ path('api_article_bookmark', {id: article.id}) }}" class="text-info js-bookmark-article-btn {{ not is_granted('ROLE_USER') ? 'not-allowed' : '' }}"><i class="fas fa-bookmark"></i><span>0</span></a></li>
+                            <li>
+                                <a href="{{ path('api_article_bookmark', {id: article.id}) }}" class="text-info js-bookmark-article-btn {{ not is_granted('ROLE_USER') ? 'not-allowed' : '' }}">
+                                    <i class="fas fa-bookmark"></i><span>{{ article.bookmarkCount }}</span>
+                                </a>
+                            </li>
                             <li><i class="fas fa-eye"></i><span>0</span></li>
-                            <li><i class="fas fa-comment"></i><span>{{ article.comments|length }}</span></li>
+                            <li><i class="fas fa-comment"></i><span>{{ article.commentCount }}</span></li>
                         </ul>
                     </div>
                 </div>
@@ -33,8 +37,8 @@
                 {% if is_granted('ROLE_USER') %}
                 <div class="d-flex justify-content-center">
                     <div class="btn-group btn-group-toggle js-like">
-                        <a href="{{ path('api_article_like', {id: article.id}) }}" class="btn btn-sm btn-outline-success js-like-btn" data-type="1"><i class="fas fa-thumbs-up"></i> <span>{{ article.likes }}</span></a>
-                        <a href="{{ path('api_article_dislike', {id: article.id}) }}" class="btn btn-sm btn-outline-danger js-like-btn" data-type="-1"><i class="fas fa-thumbs-down"></i> <span>{{ article.dislikes }}</span></a>
+                        <a href="{{ path('api_article_like', {id: article.id}) }}" class="btn btn-sm btn-outline-success js-like-btn" data-type="1"><i class="fas fa-thumbs-up"></i> <span>{{ article.likeCount }}</span></a>
+                        <a href="{{ path('api_article_dislike', {id: article.id}) }}" class="btn btn-sm btn-outline-danger js-like-btn" data-type="-1"><i class="fas fa-thumbs-down"></i> <span>{{ article.dislikeCount }}</span></a>
                     </div>
                 </div>
                 {% endif %}
