--- a/templates/comment/index.html.twig
+++ b/templates/comment/index.html.twig
@@ -39,8 +39,8 @@
                     <div class="clearfix">
                         <div class="float-left">
                             <div class="btn-group btn-group-sm js-like">
-                                <a href="{{ path('api_comment_like', {id: comment.id}) }}" class="btn btn-sm btn-outline-success js-like-btn" data-type="1"><i class="fas fa-thumbs-up"></i> <span>{{ comment.likes }}</span></a>
-                                <a href="{{ path('api_comment_dislike', {id: comment.id}) }}" class="btn btn-sm btn-outline-danger js-like-btn" data-type="-1"><i class="fas fa-thumbs-down"></i> <span>{{ comment.dislikes }}</span></a>
+                                <a href="{{ path('api_comment_like', {id: comment.id}) }}" class="btn btn-sm btn-outline-success js-like-btn" data-type="1"><i class="fas fa-thumbs-up"></i> <span>{{ comment.likeCount }}</span></a>
+                                <a href="{{ path('api_comment_dislike', {id: comment.id}) }}" class="btn btn-sm btn-outline-danger js-like-btn" data-type="-1"><i class="fas fa-thumbs-down"></i> <span>{{ comment.dislikeCount }}</span></a>
                             </div>
                         </div>
                         <div class="float-right">
