--- a/templates/article/_include/_article_list.html.twig
+++ b/templates/article/_include/_article_list.html.twig
@@ -21,7 +21,7 @@
                         <li>{{ article.author.firstname }} <a href="{{ path('user_profile', {email:article.author.username}) }}">@{{ article.author.username }}</a></li>
                         <li>{{ article.createdAt|date('d.m.Y') }}</li>
                         <li><i class="fas fa-bookmark"></i><span>{{ article.bookmarkCount }}</span></li>
-                        <li><i class="fas fa-eye"></i><span>0</span></li>
+                        <li><i class="fas fa-eye"></i><span>{{ article.watchCount }}</span></li>
                         <li><i class="fas fa-comment"></i><span>{{ article.commentCount }}</span></li>
                         <li><i class="fas fa-thumbs-up"></i> {{ article.likeCount }}</li>
                     </ul>
