--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -23,7 +23,7 @@
                                     <i class="fas fa-bookmark"></i><span>{{ article.bookmarkCount }}</span>
                                 </a>
                             </li>
-                            <li><i class="fas fa-eye"></i><span>0</span></li>
+                            <li><i class="fas fa-eye"></i><span>{{ article.watchCount }}</span></li>
                             <li><i class="fas fa-comment"></i><span>{{ article.commentCount }}</span></li>
                         </ul>
                     </div>
