--- a/templates/user/subscribs.html.twig
+++ b/templates/user/subscribs.html.twig
@@ -10,11 +10,11 @@
                 <div class="clearfix">
                     <span class="float-left">
                         {{ subscribe.firstname }} <a href="{{ path('user_profile', {email:subscribe.username}) }}">@{{ subscribe.username }}</a>
-                        <span class="rank-rect text-secondary"><i class="fas fa-star"></i> 0</span>
+                        <span class="rank-rect text-secondary"><i class="fas fa-star"></i> {{ subscribe.rank }}</span>
                     </span>
                     <div class="float-right">
                     {% if is_granted('UNSUBSCRIBE', subscribe) %}
-                        <a href="{{ path('user_unsubscribe', {email:subscribe.email}) }}" class="btn btn-sm btn-outline-secondary js-unsubscribe">Unsubscribe <i class="fas fa-bell"></i></a>
+                        <a href="{{ path('api_user_unsubscribe', {email:subscribe.email}) }}" class="btn btn-sm btn-outline-secondary js-unsubscribe">Unsubscribe <i class="fas fa-bell"></i></a>
                     {% endif %}
                     </div>
                 </div>
