--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -10,7 +10,7 @@
                             <img class="img-fluid rounded-circle" style="width: 60px" src="{{ user.avatarPath }}">
                         </div>
                         <div class="w-75">
-                            {{ user.firstname }} <a href="{{ path('user_profile', {email:user.username}) }}">@{{ user.username }}</a>
+                            {{ user.firstname }} <a href="{{ path('user_profile', {username:user.username}) }}">@{{ user.username }}</a>
                             <span class="rank-rect text-secondary"><i class="fas fa-star"></i> {{ user.rank }}</span><br>
                             <span class="text-info small">Last activity 1 minute ago</span>
                         </div>
