--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -6,7 +6,7 @@
     <h6 class="font-weight-bold">
         About me
         {% if is_granted('EDIT', user) %}
-            <a href="{{ path('user_edit', {email:user.username}) }}" class="btn btn-sm btn-outline-success"><i class="fas fa-pencil-alt"></i> Edit</a>
+            <a href="{{ path('user_edit', {username:user.username}) }}" class="btn btn-sm btn-outline-success"><i class="fas fa-pencil-alt"></i> Edit</a>
         {% endif %}
     </h6>
     <p class="f14">
