--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -12,8 +12,8 @@
                     {% endif %}
 
                     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-                    <label for="inputEmail" class="sr-only">Email</label>
-                    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
+                    <label for="inputUsername" class="sr-only">Login</label>
+                    <input value="{{ last_username }}" name="username" id="inputUsername" class="form-control" placeholder="Login" required autofocus>
                     <label for="inputPassword" class="sr-only">Password</label>
                     <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
                     <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
