--- a/templates/security/message/register_mail.html.twig
+++ b/templates/security/message/register_mail.html.twig
@@ -1,2 +1,2 @@
 You are registered in site {{ domain }}<br><br>
-Please click the <a href="{{ domain }}{{ link }}">link</a> to activate your account.
+Please click the <a href="{{ link }}">link</a> to activate your account.
