--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,28 +3,37 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6 offset-lg-3 col-xs-12 offset-xs-0">
-                <form method="post" class="p-5 p-sm-0">
-                    {% if error %}
-                        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                    {% endif %}
+    <div class="signin-form">
+        <form method="post">
+            <h2>Please sign in</h2>
+            <p class="hint-text">You can restore an account by link below</p>
+            {% if error %}
+                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            {% endif %}
 
-                    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-                    <label for="inputUsername" class="sr-only">Login</label>
-                    <input value="{{ last_username }}" name="username" id="inputUsername" class="form-control" placeholder="Login" required autofocus>
-                    <label for="inputPassword" class="sr-only">Password</label>
-                    <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-                    <div class="checkbox mb-3">
-                        <label>
-                            <input type="checkbox" name="_remember_me"> Remember me
-                        </label>
-                    </div>
-                    <button class="btn btn-block btn-primary" type="submit">Sign in</button>
-                </form>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text text-info"><i class="fas fa-user"></i></span>
+                </div>
+                <input value="{{ last_username }}" name="username" class="form-control" placeholder="Login" required autofocus>
             </div>
-        </div>
+
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text text-info"><i class="fas fa-key"></i></span>
+                </div>
+                <input type="password" name="password" class="form-control" placeholder="Password" required>
+            </div>
+
+            <div class="custom-control custom-checkbox mb-4">
+                <input type="checkbox" name="_remember_me" class="custom-control-input" id="customCheck">
+                <label class="custom-control-label" for="customCheck">Remember me</label>
+            </div>
+
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+            <button class="btn btn-block btn-primary" type="submit">Sign in</button>
+            <a href="{{ path('app_reset_password') }}" class="btn btn-block btn-outline-secondary">Restore account</a>
+        </form>
     </div>
 {% endblock %}
