--- a/templates/user/subscribs.html.twig
+++ b/templates/user/subscribs.html.twig
@@ -22,7 +22,7 @@
                     {% endif %}
                     </div>
                 </div>
-                <span class="text-info small">Last activity 1 minute ago</span>
+                <span class="text-info small">{{ subscribe.lastActivityAt|ago }}<</span>
             </div>
         </div>
     {% else %}
