--- a/templates/security/message/activate_fail_message.html.twig
+++ b/templates/security/message/activate_fail_message.html.twig
@@ -4,6 +4,6 @@
 
 {% block body %}
     <div class="container">
-        <div class="alert alert-danger">Wrong activating hash.</div>
+        <div class="alert alert-danger">Wrong activation hash</div>
     </div>
 {% endblock %}
