--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,5 +1,15 @@
 body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
   background-color: #efefefad;
+}
+
+main {
+  flex: 1;
+}
+
+body {
 }
 
 a {
