--- a/templates/security/message/register_mail.html.twig
+++ b/templates/security/message/register_mail.html.twig
@@ -1,2 +1,3 @@
-You are registered in site {{ domain }}<br><br>
-Please click the <a href="{{ link }}">link</a> to activate your account.
+You are registered in site <a href="{{ app.request.host }}">{{ app.request.host }}</a>
+<br><br>
+Please click the <a href="{{ link }}">link</a> to activate your account
