--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -49,7 +49,7 @@
                 </div>
                 {% endif %}
                 <div class="pt-2">
-                    {% include 'comment/index.html.twig' with {comments: article.comments, commentForm: commentForm} %}
+                    {% include 'comment/index.html.twig' with { comments: article.comments } %}
                 </div>
             </div>
             <div class="col-4 card p-4">
