--- a/templates/comment/index.html.twig
+++ b/templates/comment/index.html.twig
@@ -1,5 +1,3 @@
-{% form_theme commentForm 'bootstrap_4_layout.html.twig' %}
-
 <div class="comments">
     <div class="comments__header pb-3">
         <div class="clearfix">
@@ -7,16 +5,7 @@
             <h6 class="float-right text-muted">{{ comments|length }} comments</h6>
         </div>
         {% if is_granted('ROLE_USER') %}
-            {{ form_start(commentForm) }}
-            <div class="d-flex">
-                <div class="w-100">
-                    {{ form_widget(commentForm) }}
-                </div>
-                <div class="pl-2">
-                    <button type="submit" class="btn btn-outline-success float-right d-block"><i class="fas fa-plus-circle"></i> Send</button>
-                </div>
-            </div>
-            {{ form_end(commentForm) }}
+            {{ htmlAddComment is defined ? htmlAddComment|raw : '' }}
         {% else %}
             <p class="bg-light rounded p-4 text-center text-info">
                 Please <a href="{{ path('app_login') }}">sign in</a> or <a href="{{ path('app_register') }}">register</a> for commenting
