--- a/templates/comment/edit.html.twig
+++ b/templates/comment/edit.html.twig
@@ -1,12 +1,12 @@
 {% form_theme form 'bootstrap_4_layout.html.twig' %}
 
 {{ form_start(form) }}
-<div class="d-flex">
-    <div class="w-100">
+<div class="row">
+    <div class="col-lg-9 col-md-8 col-sm-12">
         {{ form_widget(form) }}
     </div>
-    <div class="pl-2">
-        <button type="submit" class="btn btn-outline-success float-right d-block"><i class="fas fa-plus-circle"></i> Send</button>
+    <div class="col-lg-3 col-md-4 col-sm-12">
+        <button type="submit" class="btn btn-outline-success btn-block"><i class="fas fa-plus-circle"></i> Send</button>
     </div>
 </div>
 {{ form_end(form) }}
