--- a/templates/comment/index.html.twig
+++ b/templates/comment/index.html.twig
@@ -15,7 +15,7 @@
     <div class="comments__list">
         {% for comment in comments %}
             <div class="d-flex">
-                <div class="pr-3">
+                <div class="pr-3 d-none d-sm-block">
                     <img class="img-fluid rounded-circle" style="width: 50px" src="{{ comment.owner.avatarPath }}">
                 </div>
                 <div class="w-100">
