--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -19,7 +19,8 @@ a {
 }
 
 @import 'helper';
-@import 'component';
+@import 'components';
 @import 'login';
 @import 'register';
 
+@import 'media/media';
