--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -7,7 +7,7 @@
                 {% for user in pagination %}
                     <div class="d-flex">
                         <div class="pr-3">
-                            <img class="img-fluid rounded-circle" style="width: 60px" src="{{ user.avatarPath }}">
+                            <img class="img-fluid rounded-circle user-avatar" src="{{ image_path ~ user.avatar }}">
                         </div>
                         <div class="w-75">
                             {{ user.firstname }} <a href="{{ path('user_profile', {username:user.username}) }}">@{{ user.username }}</a>
