--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -9,7 +9,7 @@
                 <h1><span class="font-weight-bold">{{ article.title }}</span></h1>
                 <div class="clearfix py-2">
                     <div class="float-left">
-                        <img class="img-fluid rounded-circle" src="{{ article.author.avatarPath }}">
+                        <img class="img-fluid rounded-circle user-avatar" src="{{ image_path ~ article.author.avatar }}">
                         <a href="{{ path('user_profile', {username:article.author.username}) }}">{{ article.author.firstname }}</a>
                     </div>
                     <div class="float-right">
